// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardTable > CardTable.vue renders OXD CardTable > CardTable 1`] = `
<div class="std-table" role="table">
  <!-- std-card-table header start -->
  <!--v-if-->
  <!-- std-card-table header end -->
  <!-- std-card-table body start -->
  <div class="std-table-body std-card-table-body" role="rowgroup">
    <div class="std-table-card --mobile">
      <div class="std-table-row std-table-row--with-border std-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="std-table-cell" role="cell" style="flex: 1;">
              <div class="std-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 1</div>
              </div>
            </div>
            <div class="std-table-cell" role="cell" style="flex: 5;">
              <div class="std-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class="std-table-card --mobile">
      <div class="std-table-row std-table-row--with-border std-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="std-table-cell" role="cell" style="flex: 1;">
              <div class="std-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 2</div>
              </div>
            </div>
            <div class="std-table-cell" role="cell" style="flex: 5;">
              <div class="std-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class="std-table-card --mobile">
      <div class="std-table-row std-table-row--with-border std-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="std-table-cell" role="cell" style="flex: 1;">
              <div class="std-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 3</div>
              </div>
            </div>
            <div class="std-table-cell" role="cell" style="flex: 5;">
              <div class="std-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div><!-- std-card-table body end -->
</div>
`;

exports[`CardTable > CardTable.vue should renders OXD CardTable > CardTable with card decorator 1`] = `
<div class="std-table" role="table" rowdecorator="std-table-decorator-card">
  <!-- std-card-table header start -->
  <!--v-if-->
  <!-- std-card-table header end -->
  <!-- std-card-table body start -->
  <div class="std-table-body std-card-table-body" role="rowgroup">
    <div class="std-table-card --mobile">
      <div class="std-table-row std-table-row--with-border std-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="std-table-cell" role="cell" style="flex: 1;">
              <div class="std-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 1</div>
              </div>
            </div>
            <div class="std-table-cell" role="cell" style="flex: 5;">
              <div class="std-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class="std-table-card --mobile">
      <div class="std-table-row std-table-row--with-border std-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="std-table-cell" role="cell" style="flex: 1;">
              <div class="std-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 2</div>
              </div>
            </div>
            <div class="std-table-cell" role="cell" style="flex: 5;">
              <div class="std-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class="std-table-card --mobile">
      <div class="std-table-row std-table-row--with-border std-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="std-table-cell" role="cell" style="flex: 1;">
              <div class="std-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 3</div>
              </div>
            </div>
            <div class="std-table-cell" role="cell" style="flex: 5;">
              <div class="std-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div><!-- std-card-table body end -->
</div>
`;

exports[`CardTable > CardTable.vue should renders OXD CardTable > CardTable with selector config 1`] = `
<div class="std-table" role="table" rowdecorator="std-table-decorator-card">
  <!-- std-card-table header start -->
  <!--v-if-->
  <!-- std-card-table header end -->
  <!-- std-card-table body start -->
  <div class="std-table-body std-card-table-body" role="rowgroup">
    <div class="std-table-card --mobile">
      <div class="std-table-row std-table-row--with-border std-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="std-table-cell" role="cell" style="flex: 1;">
              <div class="std-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 1</div>
              </div>
            </div>
            <div class="std-table-cell" role="cell" style="flex: 5;">
              <div class="std-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class="std-table-card --mobile">
      <div class="std-table-row std-table-row--with-border std-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="std-table-cell" role="cell" style="flex: 1;">
              <div class="std-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 2</div>
              </div>
            </div>
            <div class="std-table-cell" role="cell" style="flex: 5;">
              <div class="std-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class="std-table-card --mobile">
      <div class="std-table-row std-table-row--with-border std-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="std-table-cell" role="cell" style="flex: 1;">
              <div class="std-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 3</div>
              </div>
            </div>
            <div class="std-table-cell" role="cell" style="flex: 5;">
              <div class="std-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div><!-- std-card-table body end -->
</div>
`;

exports[`CardTable > CardTable.vue should renders OXD CardTable > CardTable without selectable 1`] = `
<div class="std-table" role="table">
  <!-- std-card-table header start -->
  <!--v-if-->
  <!-- std-card-table header end -->
  <!-- std-card-table body start -->
  <div class="std-table-body std-card-table-body" role="rowgroup">
    <div class="std-table-card --mobile">
      <div class="std-table-row std-table-row--with-border std-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="std-table-cell" role="cell" style="flex: 1;">
              <div class="std-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 1</div>
              </div>
            </div>
            <div class="std-table-cell" role="cell" style="flex: 5;">
              <div class="std-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class="std-table-card --mobile">
      <div class="std-table-row std-table-row--with-border std-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="std-table-cell" role="cell" style="flex: 1;">
              <div class="std-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 2</div>
              </div>
            </div>
            <div class="std-table-cell" role="cell" style="flex: 5;">
              <div class="std-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class="std-table-card --mobile">
      <div class="std-table-row std-table-row--with-border std-table-row--clickable" role="row">
        <!--v-if-->
        <div class="card-center">
          <!--v-if-->
          <div class="card-item card-body-slot">
            <div class="std-table-cell" role="cell" style="flex: 1;">
              <div class="std-table-card-cell">
                <div class="header">Column 1</div>
                <div class="data">Data 3</div>
              </div>
            </div>
            <div class="std-table-cell" role="cell" style="flex: 5;">
              <div class="std-table-card-cell">
                <div class="header">Column 2</div>
                <div class="data">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div><!-- std-card-table body end -->
</div>
`;
